--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-asgiref
-Django
+asgiref==3.7.2
+Django==5.0.2
 django-widget-tweaks==1.5.0
 pillow==10.2.0
 sqlparse==0.4.4
-typing_extensions==4.1
+typing_extensions==4.10.0
